tests/positive/add1.c
unsigned src(unsigned a, unsigned b, unsigned c)
{
  return a + b + c;
}

unsigned tgt(unsigned a, unsigned b, unsigned c)
{
  return c + a + b;
}
