tests/negative/add1.c
int src(int a, int b, int c)
{
  return a + b + c;
}

int tgt(int a, int b, int c)
{
  return c + a + b;
}
